--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age Checker</title>
-    <link rel="shortcut icon" href="/img/iconage.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/iconage.png" type="image/x-icon">
     <link rel="stylesheet" href="AgeChecker.css">
 </head>
 
